# crucible

./: .gitignore  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml  verify.sh
.github/workflows/: ci.yml  release.yml
docs/: attestia-integration-roadmap.md  gameplan.md  research-grounding.md
docs/phase-0/: chatgpt-deep-research.md  swarm-01-capability-gaps.md  swarm-02-designer-bias.md  swarm-03-multi-attempt-scoring.md  swarm-04-novel-benchmark-designs.md  swarm-05-agent-eval-methodology.md  swarm-06-reward-hacking-detection.md  swarm-07-multi-criterion-scoring.md  swarm-08-tool-efficiency-budgets.md  swarm-09-honeypot-patterns.md  swarm-10-datacurve-followup.md  swarm-11-replication-packages.md  swarm-12-preregistration-stats.md  swarm-13-cryptographic-provenance.md  swarm-14-third-party-audit.md  swarm-15-ablation-tuning.md  swarm-16-engagement-reward-surface.md  swarm-17-kernel-architecture.md  swarm-18-sandboxing-hardening.md  swarm-19-critic-role-value.md  swarm-20-honeypot-eval-awareness.md  swarm-21-task-relevant-vs-irrelevant-signals.md  swarm-22-positive-engagement-levers.md  swarm-23-self-competition-framing.md  swarm-24-designer-generative-engagement.md  swarm-25-engagement-vs-measurement-integrity.md
docs/phase-2/: calibration.md  grounding-research.md  kickoff-forks-swarm.md  panel.json  swarm-wave0-contracts.md
npm/: README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  package.json
puzzles/seed-sulzbach-55252/: setup_script
site/: astro.config.mjs
site/src/: site-config.ts
src/ai_crucible/: __init__.py  __main__.py  attestation.py  budget.py  cli.py  engagement.py  eval_awareness.py  framing.py  kernel.py  (+6 more)
tests/: conftest.py  test_budget.py  test_calibration.py  test_characterize.py  test_characterize_run.py  test_cli.py  test_contracts.py  test_engagement.py  test_human_labels.py  test_instrument.py  test_kernel.py  test_models.py  test_observability.py  test_panel_store.py  test_puzzle.py  test_roles.py  test_sandbox.py  test_scoring.py
(+57 files in other folders)
