[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible"
version = "0.1.0"
description = "Diagnostic adversarial game for frontier LLMs — a policy-enforced kernel that mediates a Designer/Solver/Judge cycle, scores against a hidden oracle, and curates a Lab/Arena/Regression catalog."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }]
keywords = ["llm", "evaluation", "auditing-game", "reward-hacking", "inspect-ai", "diagnostic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

# Kernel is a thin policy layer on Inspect AI (research-grounding §10.2).
dependencies = [
  "inspect-ai>=0.3",
  "pydantic>=2.5",
  "numpy>=1.26",
  "scipy>=1.11",       # scipy.stats.sobol_indices (tuning), Clopper-Pearson
]

[project.optional-dependencies]
# Statistical stack (research-grounding §1, §9.3): McNemar, beta-binomial.
stats = ["statsmodels>=0.14"]
# Dev / CI toolchain.
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11"]

[project.urls]
Homepage = "https://github.com/dogfood-lab/crucible"
Repository = "https://github.com/dogfood-lab/crucible"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "slow: deselect with -m 'not slow'",
  "integration: end-to-end tests that run a full attempt cycle",
  "gpu: requires a local model panel (Phase 2)",
]

[tool.coverage.report]
# Single source of truth for the coverage floor; CI reads this via tomllib.
fail_under = 60

[tool.mypy]
python_version = "3.11"
packages = ["crucible"]
ignore_missing_imports = true
